Simplify container constructor invocations